packages/tdb-dashboard/src/App.css
/* ... */
.Resizer:hover {
  -webkit-transition: all 2s ease;
  transition: all 2s ease;
}

.Resizer.horizontal {
  height: 1px !important;
  margin: -5px 0;
  border-top: 1px solid rgba(255, 255, 255, 0) !important;
  border-bottom: 1px solid rgba(255, 255, 255, 0) !important;
  cursor: row-resize;
  width: 100%;
  background: #535557;
}



.Resizer.horizontal:hover {
  border-top: 2px solid rgba(0, 0, 0, 0.5);
  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
}

.Resizer.vertical {
  width: 5px !important;
  margin: 0 -5px;
  border-left: 1px solid rgba(255, 255, 255, 0) !important;
  border-right: 1px solid rgba(255, 255, 255, 0) !important;
  cursor: col-resize;
  background: inherit;
}

div.SplitPane {
  padding-left: 0px;
}

div.SplitPane  .horizontal {
  top: auto !important;
  bottom: auto !important;
}

.Resizer.vertical:hover {
  border-left: 2px solid rgba(0, 0, 0, 0.5);
  border-right: 2px solid rgba(0, 0, 0, 0.5);
}
.Pane1 {
  background-color: #222;
  /*min-width: 320px !important;*/
}
.Pane2 {
  background-color: transparent;
}

.Resizer.vertical {
  border-left: 0 !important;
  border-right: 0 !important;
}

.pro-sidebar-content {
  border-right: 1px solid #303030;
  background: #1a1919;
}
/* ---------- Split Pane resizing css ---------- */


/* ---------- progress bar css ---------- */
div.progress-bar-position {
  /*margin-top: 50%;*/
  padding: 0 !important;
}

div.progress-bar-container {
  margin-left: 1px !important;
}
/* ---------- progress bar css ---------- */

/* ---------- icon bar css ---------- */x
.nav-bar-row {
  height: -webkit-fill-available;
}

.nav-icon-bar{
  flex-direction: column;
  width: 70px;
  position: fixed;
  padding: 0px !important;
  background-color: rgb(49, 48, 48);
  height: -webkit-fill-available;
}

.nav-item {
  text-align: center;
 
}


.nav-link {
  /* color: #a3b6ca !important;*/
  color: #fff !important;
}

.navbar-dark .navbar-nav .nav-link.disabled {
  color: rgba(255, 255, 255, 0.25) !important;
}

.nav-bar-dropdown-divider{
  border-top: 1px solid #a3b6ca;
}

.nav-icon {
  font-size: 30px;
  padding-top: 0 !important;
}

/*.nav-icon-disabled {
  color: rgba(0,0,0,.3) !important;
}*/

.nav-icon-align {
  margin: auto 0px 0px;
  padding: 0px;
  align-self: flex-end;
}

.nav-icons-bottom {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.main-navbar-shadow {
  box-shadow: 1px 0px 7px rgb(0 0 0 / 50%);
  border-bottom: 1px solid rgba(0,0,0,0.175);
}



.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus, 
.success__color {
    color:  #00bc8c !important;
}

.navbar-dark .navbar-nav .nav-link.active{
    background-color: #00bc8c;
    color: #002856 !important;
}
/* ---------- icon bar css ---------- */

/* ---------- sub nav css ----------- */

.nav-pills .nav-link.active {
  border-bottom: 3px solid #00bc8c !important;
  background: transparent !important ;
  border-radius: 0 !important;

}

.nav-pills .nav-link.hover {
  color: #00bc8c !important;
}

.sub-nav {
  color: #E3EBF6 !important;
}

.btn-light {
  color: #000 !important;
}

.nav-icon{
  padding-top: 1rem!important;
  padding-bottom: 1rem!important;
  display: block;
  padding: 0.5rem 1rem;
}
/* ---------- sub nav css ----------- */

.cancel-button {
  border: 0px !important;
  float: right;
}

/* ---------- custom active css ---------- */
.list-group-item.active {
  color: #00C08B !important;
  font-weight: bold !important;
}

.list-group-item:hover {
  color: #00C08B !important;
}



/*.nav-icon .nav-link .active {
  color: white;
  background-color:transparent;
}*/
/* ---------- custom active css ---------- */


/* ---------- overriding react components schema builder css ---------- */
.schema-summary-icons {
  color: #E3EBF6;
  font-size: 24px;
}

.doc-summary-card {
  min-width: "33.333333%"
}

.RRT__tab {
  background: transparent !important;
  border-style: solid;
  border-color: transparent !important;
}

.RRT__showmore{
  background: transparent;
  border-style: none;
}

.RRT__showmore-label--selected {
  background: black !important;
  color:white;
}
.RRT__showmore-list--opened{
  background: black !important;
  color:white;
  border-radius: 4px;
}

.tdb__panel__bar, .tdb__panel__title {
  background: transparent !important;
}

/* accordian */
.accordion-button {	
  background: transparent !important;	
  color: #fff !important;	
  border-radius: 2px !important;
  border-color: #444;	
}

.accordion-item {
  border: 1px solid #444;	
}

.accordion-button:hover{	
  background-color: #414141 !important;	
  color: #f8f9fa !important;	
}

.diff__accordian {
  background: transparent !important;	
}

/*
.accordion__button {
  background-color: transparent !important;
  color: #cae4fd !important;
  padding: 12px !important;
  border-radius: 4px !important;
}


.accordion-item:last-of-type .accordion-button.collapsed, .accordion-button.collapsed{
  color: #adb5bd;
}

.accordion__button:hover{
  background-color: #414141 !important;
  color: #cae4fd !important;

}*/

/* ---------- overriding react components schema builder css ---------- */


/* ---------- form control custom dark mode ---------- */
.form-control {
  color: #adb5bd !important;
  background-color: #000 !important;
  /* background-color: transparent !important; */
  border-color: rgb(102, 102, 102) !important;
  min-height: 49px !important;
}

/* ---------- form control custom dark mode ---------- */
.form-select-light {
  color: #adb5bd !important;
  /*background-color: #444 !important;*/
  background-color: transparent !important;
  border-color: rgb(102, 102, 102) !important;
  min-height: 49px !important;
}



.form-control:disabled:hover, .form-control[readonly]:hover{
  cursor: not-allowed;
}

tbody, td, tfoot, th, thead, tr {
  border-style: solid !important;
  border-bottom: 1px solid #444 !important;
}


.form-select {
  mix-blend-mode: difference;
  border: 1px solid #adb5bd;
}
/* ... */

